@@ -30,20 +30,25 @@ import org.apache.cassandra.SchemaLoader;
 import org.apache.cassandra.config.DatabaseDescriptor;
 import org.apache.cassandra.db.ColumnFamilyStore;
 import org.apache.cassandra.db.Keyspace;
+import org.apache.cassandra.db.RowUpdateBuilder;
+import org.apache.cassandra.db.compaction.OperationType;
 import org.apache.cassandra.dht.Range;
 import org.apache.cassandra.dht.Token;
 import org.apache.cassandra.exceptions.ConfigurationException;
+import org.apache.cassandra.io.sstable.format.SSTableReader;
 import org.apache.cassandra.locator.AbstractReplicationStrategy;
 import org.apache.cassandra.locator.TokenMetadata;
 import org.apache.cassandra.schema.KeyspaceParams;
 import org.apache.cassandra.utils.FBUtilities;
+import org.apache.cassandra.utils.concurrent.Refs;
 
 import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertFalse;
 
 public class ActiveRepairServiceTest
 {
     public static final String KEYSPACE5 = "Keyspace5";
-    public static final String CF_STANDRAD1 = "Standard1";
+    public static final String CF_STANDARD1 = "Standard1";
     public static final String CF_COUNTER = "Counter1";
 
     public String cfname;
@@ -59,7 +64,7 @@ public class ActiveRepairServiceTest
         SchemaLoader.createKeyspace(KEYSPACE5,
                                     KeyspaceParams.simple(2),
                                     SchemaLoader.standardCFMD(KEYSPACE5, CF_COUNTER),
-                                    SchemaLoader.standardCFMD(KEYSPACE5, CF_STANDRAD1));
+                                    SchemaLoader.standardCFMD(KEYSPACE5, CF_STANDARD1));
     }
 
     @Before
@@ -212,5 +217,62 @@ public class ActiveRepairServiceTest
             endpoints.add(endpoint);
         }
         return endpoints;
+    }
+
+    @Test
+    public void testGetActiveRepairedSSTableRefs()
+    {
+        ColumnFamilyStore store = prepareColumnFamilyStore();
+        Set<SSTableReader> original = store.getLiveSSTables();
+
+        UUID prsId = UUID.randomUUID();
+        ActiveRepairService.instance.registerParentRepairSession(prsId, Collections.singletonList(store), null, true, 0, false);
+        ActiveRepairService.ParentRepairSession prs = ActiveRepairService.instance.getParentRepairSession(prsId);
+
+        //add all sstables to parent repair session
+        prs.addSSTables(store.metadata.cfId, original);
+
+        //retrieve all sstable references from parent repair sessions
+        Refs<SSTableReader> refs = prs.getActiveRepairedSSTableRefs(store.metadata.cfId);
+        Set<SSTableReader> retrieved = Sets.newHashSet(refs.iterator());
+        assertEquals(original, retrieved);
+        refs.release();
+
+        //remove 1 sstable from data data tracker
+        Set<SSTableReader> newLiveSet = new HashSet<>(original);
+        Iterator<SSTableReader> it = newLiveSet.iterator();
+        final SSTableReader removed = it.next();
+        it.remove();
+        store.getTracker().dropSSTables(new com.google.common.base.Predicate<SSTableReader>()
+        {
+            public boolean apply(SSTableReader reader)
+            {
+                return removed.equals(reader);
+            }
+        }, OperationType.COMPACTION, null);
+
+        //retrieve sstable references from parent repair session again - removed sstable must not be present
+        refs = prs.getActiveRepairedSSTableRefs(store.metadata.cfId);
+        retrieved = Sets.newHashSet(refs.iterator());
+        assertEquals(newLiveSet, retrieved);
+        assertFalse(retrieved.contains(removed));
+        refs.release();
+    }
+
+    private ColumnFamilyStore prepareColumnFamilyStore()
+    {
+        Keyspace keyspace = Keyspace.open(KEYSPACE5);
+        ColumnFamilyStore store = keyspace.getColumnFamilyStore(CF_STANDARD1);
+        store.disableAutoCompaction();
+        for (int i = 0; i < 10; i++)
+        {
+            new RowUpdateBuilder(store.metadata, System.currentTimeMillis(), Integer.toString(i))
+            .clustering("c")
+            .add("val", "val")
+            .build()
+            .applyUnsafe();
+        }
+        store.forceBlockingFlush();
+        return store;
     }
 }
